[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry]
name = "Sherlock"
description = "Hunt down social media accounts by username across social networks"
version = "0.0.1"
homepage = "http://sherlock-project.github.io/"
repository = "https://github.com/sherlock-project/sherlock.git"
authors = [ "Sherlock Project" ]
maintainers = [
    "Siddharth Dushantha",
    "Matheus Felipe",
    "Sondreal",
    "Paul Pfeister"
]
readme = "README.md"
packages = [
    { include = "sherlock" }
]
license = "MIT"
keywords = [ "osint", "reconnaissance", "information gathering" ]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Communications",
    "Topic :: Security"
]

[tools.poetry.urls]
Homepage = "http://sherlock-project.github.io/"
Repository = "https://github.com/sherlock-project/sherlock.git"
Issues = "https://github.com/sherlock-project/sherlock/issues"

[tool.poetry.scripts]
sherlock = "sherlock:main"
